fixed layout issues in index

--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -4,13 +4,13 @@
 	float: left;
 	text-align: left;
 	border-radius: 15px;
-	width: 700px;
+	width: 600px;
 	margin-top: 4%;
 }
 #welcome_header span
 {
 	text-align: center;
-	font-size: 2.4em;
+	font-size: 1.4em;
 	margin-left: 20px;
 	margin-bottom: 20px;
 	margin-top: 20px;
