--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
 }
 .page_container
 {
-	width: 60%;
+	width: 70%;
 	background-color: white;
 	margin-left: auto;
 	margin-right: auto;
